Fix IE layout issues

--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -6,21 +6,27 @@ header {
   @include full;
 }
 
-aside {
-  width: 20em;
-}
-
 #nav {
   position: fixed;
   top: 0;
   bottom: 0;
-  left: 0;
-  transform: translate3d(-100%, 0, 0);
-  transition: transform 0.5s;
+  width: 20em;
+  // IE10+:
+  // left: 0;
+  // transform: translate3d(-100%, 0, 0);
+  // transition: transform 0.5s;
+
+  // IE9+:
+  left: -20em;
+  transition: left 0.5s;
 
   // See https://css-tricks.com/off-canvas-menu-with-css-target/
   &:target {
-    transform: translate3d(0, 0, 0);
+    // IE10+:
+    // transform: translate3d(0, 0, 0);
+
+    // IE9+:
+    left: 0;
   }
 }
 
@@ -49,7 +55,7 @@ aside {
     @include span(4);
   }
   #nav {
-    position: initial;
+    position: static;
     transform: none;
   }
 
